@@ -1,6 +1,7 @@
 v1.2.4 - Pending
 	+ Use case insensitive sorting for library (holy_robot)
 	+ Ignore "the" when sorting library in artist/album views (holy_robot)
+	+ Allow saving/overwriting an existing playlist
 	+ Update license to GNU GPLv3
 	+ Bug: Fix nl.po translation causing crash
 	+ Bug: Remember playlist position when adding from library
